--- a/uptown/css/login.css
+++ b/uptown/css/login.css
@@ -95,7 +95,7 @@
     box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 40px 20px;
+    margin: 40px 20px 40px 20px;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
@@ -124,8 +124,8 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 5px;
-    width: 85%;
+    margin: 10px;
+    width: 80%;
     border: 2px solid #f6f6f6;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
@@ -205,11 +205,11 @@
     animation-duration:1s;
   }
   
-  .fadeIn.first {
+  /*.fadeIn.first {
     -webkit-animation-delay: 0.4s;
     -moz-animation-delay: 0.4s;
     animation-delay: 0.4s;
-  }
+  }*/
   
   .fadeIn.second {
     -webkit-animation-delay: 0.6s;
@@ -248,8 +248,37 @@
   .underlineHover:hover:after{
     width: 100%;
   }
+
+  .bgbtn02 img{     
+    margin-bottom: 10px;     
+    margin-right: 10px;     
+  } 
   
-  
+  /*social icon*/
+  .social_icon span{
+    font-size: 40px;
+    margin-left: 10px;
+    color: #FFC312;
+  }
+    
+  .social_icon span:hover{
+    color: rgb(23, 203, 248);
+    cursor: pointer;
+  }
+    
+
+  .social_icon{
+    position: absolute;
+    right: 20px;
+    top: 5px;
+  }
+      
+  .input-group-prepend span{
+    width: 50px;
+    background-color: #FFC312;
+    color: black;
+    border:0 !important;
+  }
   
   /* OTHERS */
   
