--- a/daw.webapp12/src/main/resources/templates/Login.html
+++ b/daw.webapp12/src/main/resources/templates/Login.html
@@ -28,7 +28,7 @@
       
           <!-- Sign Up -->
           <div id="formFooter">
-            <a class="underlineHover" href="signUp.html">Registrarse</a>
+            <a class="underlineHover" href="SignUp.html">Registrarse</a>
           </div>
       
         </div>
