--- a/daw.webapp12/src/main/resources/templates/properties-modificar.html
+++ b/daw.webapp12/src/main/resources/templates/properties-modificar.html
@@ -42,7 +42,7 @@
             <li class="nav-item"><a href="myFavourites.html" class="nav-link">Mis favoritos</a></li>
             <li class="nav-item"><a href="properties-modificar.html" class="nav-link">Mis anuncios</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-            <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
+            <li class="nav-item"><a href="Login.html" class="nav-link">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
