--- a/uptown/css/propertyUpload.css
+++ b/uptown/css/propertyUpload.css
@@ -9,7 +9,7 @@
     justify-content: center;
     width: 100%;
     min-height: 100%;
-    padding: 20px;
+    padding: 40px;
   }
 
   #content {
@@ -18,9 +18,9 @@
     visibility: none;
     padding: 30px;
     width: 90%;
-    max-width: 450px;
+    max-width: 600px;
     position: relative;
-    padding: 0px;
+    padding: 30px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     text-align: center;
@@ -35,3 +35,31 @@
     width:400px;
     height: 111px;
   }
+
+  .botonDesp{
+    text-align: center;
+    position: relative;
+    left: -10px;
+    height:20px; }
+  
+
+  .botonDesp1{
+    text-align: left;
+    position: relative;
+    top: 20px;
+    left: 50px;
+    font-weight: normal;
+    font-size: 18px;
+    height: 0px;
+    width: 30%; }
+    
+  .botonDesp2{
+    text-align: center;
+    position: relative;
+    top: 20px;
+    left: 200px;
+    font-weight: normal;
+    font-size: 18px;
+    height: 0px;
+    width: 30%; }
+     
