--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -41,8 +41,8 @@
             <li class="nav-item"><a href="property-upload.html" class="nav-link">Poner anuncio</a></li>
             <li class="nav-item"><a href="properties.html" class="nav-link">Mis favoritos</a></li>
             <li class="nav-item"><a href="properties-modificar.html" class="nav-link">Mis anuncios</a></li>
-            <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-            <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
+            <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -86,6 +86,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate mb-5">
           	<span class="subheading">Recomendaciones</span>
             <h2 class="mb-2">Viviendas seleccionadas para ti</h2>
+              {{#hola}} <p> {{hola}}</p>{{/hola}}
           </div>
         </div>
         <div class="row">
