--- a/daw.webapp12/src/main/resources/templates/properties.html
+++ b/daw.webapp12/src/main/resources/templates/properties.html
@@ -37,12 +37,12 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="property-upload.html" class="nav-link">Poner anuncio</a></li>
-            <li class="nav-item"><a href="properties.html" class="nav-link">Mis favoritos</a></li>
-            <li class="nav-item"><a href="properties-modificar.html" class="nav-link">Mis anuncios</a></li>
-            <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-            <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
+				<li class="nav-item active"><a href="/MainPage" class="nav-link">Home</a></li>
+				<li class="nav-item"><a href="/property-upload" class="nav-link">Poner anuncio</a></li>
+				<li class="nav-item"><a href="/properties" class="nav-link">Mis favoritos</a></li>
+				<li class="nav-item"><a href="/properties-modificar" class="nav-link">Mis anuncios</a></li>
+				<li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
+				<li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
