--- a/daw.webapp12/src/main/resources/templates/login.html
+++ b/daw.webapp12/src/main/resources/templates/login.html
@@ -28,8 +28,9 @@
       
           <!-- Sign Up -->
           <div id="formFooter">
-            <a class="underlineHover" href="/signup">Registrarse</a>
+            <a class="underlineHover" href="signUp.html">Registrarse</a>
           </div>
+          <a href="http://127.0.0.1:5500/uptown/index.html"><input type="button" value="Home"></a>
       
         </div>
       </div>
