--- a/daw.webapp12/src/main/resources/templates/properties-modificar.html
+++ b/daw.webapp12/src/main/resources/templates/properties-modificar.html
@@ -30,19 +30,19 @@
     
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand">AppName</a>
+	      <a class="navbar-brand">Ruvik</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a href="/MainPage" class="nav-link">Home</a></li>
-				<li class="nav-item"><a href="/property-upload" class="nav-link">Poner anuncio</a></li>
-				<li class="nav-item"><a href="/properties" class="nav-link">Mis favoritos</a></li>
-				<li class="nav-item"><a href="/properties-modificar" class="nav-link">Mis anuncios</a></li>
-				<li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
-				<li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="property-upload.html" class="nav-link">Poner anuncio</a></li>
+            <li class="nav-item"><a href="properties.html" class="nav-link">Mis favoritos</a></li>
+            <li class="nav-item active"><a href="properties-modificar.html" class="nav-link">Mis anuncios</a></li>
+            <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -54,8 +54,8 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Properties <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">Choose <br>Your Desired Home</h1>
+          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Mis anuncios <i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Tus <br>anuncios publicados</h1>
           </div>
         </div>
       </div>
@@ -76,12 +76,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
 						<span class="location">Oakland</span>
-						<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+						<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -97,12 +97,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-						<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+						<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-						</a>
+        				</button>
 						
         			</div>
         		</div>
@@ -119,11 +119,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
+        				</button>
         				</a>
         			</div>
         		</div>
@@ -141,12 +142,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -162,12 +163,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -183,12 +184,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -205,12 +206,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -226,12 +227,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
@@ -247,12 +248,12 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit">
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
-						</a>
-        				<a class="d-flex align-items-center justify-content-center btn-custom-edit2">
+						</button>
+        				<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
         					<span class="icon-edit"></span>
-        				</a>
+        				</button>
         			</div>
         		</div>
         	</div>
