--- a/uptown/css/propertyUpload.css
+++ b/uptown/css/propertyUpload.css
@@ -10,6 +10,7 @@
     width: 100%;
     min-height: 100%;
     padding: 40px;
+    
   }
 
   #content {
@@ -22,8 +23,9 @@
     position: relative;
     padding: 30px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    box-shadow: 100 30px 60px 0 rgba(0,0,0,0.3);
     text-align: center;
+    background:#ffffff;
   }
 
   textarea{
@@ -35,6 +37,13 @@
     width:400px;
     height: 111px;
   }
+  .botonDesp0{
+    font-style: oblique;
+    font-size: 20px;
+    text-align: center;
+    position: relative;
+    left: -10px;
+    height:20px; }
 
   .botonDesp{
     text-align: center;
