--- a/daw.webapp12/src/main/resources/templates/properties-modificar.html
+++ b/daw.webapp12/src/main/resources/templates/properties-modificar.html
@@ -37,12 +37,12 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="property-upload.html" class="nav-link">Poner anuncio</a></li>
-            <li class="nav-item"><a href="properties.html" class="nav-link">Mis favoritos</a></li>
-            <li class="nav-item active"><a href="properties-modificar.html" class="nav-link">Mis anuncios</a></li>
-            <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-            <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
+	        <li class="nav-item"><a href="/MainPage" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="/property-upload" class="nav-link">Poner anuncio</a></li>
+            <li class="nav-item"><a href="/properties" class="nav-link">Mis favoritos</a></li>
+            <li class="nav-item active"><a href="/properties-modificar" class="nav-link">Mis anuncios</a></li>
+            <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -64,18 +64,19 @@
 		<section class="ftco-section">
     	<div class="container">
         <div class="row">
+			{{#myFavourites}}
         	<div class="col-md-4">
         		<div class="property-wrap ftco-animate">
         			<a href="properties-single.html" class="img" style="background-image: url(images/work-1.jpg);"></a>
         			<div class="text">
-        				<p class="price"><span class="old-price">800,000</span><span class="orig-price">$3,050<small>/mo</small></span></p>
+        				<p class="price"><span class="old-price">{{price}}</span><span class="orig-price">{{price}}<small>/mo</small></span></p>
         				<ul class="property_list">
-        					<li><span class="flaticon-bed"></span>3</li>
-        					<li><span class="flaticon-bathtub"></span>2</li>
-        					<li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
+        					<li><span class="flaticon-bed"></span>{{rooms}}</li>
+        					<li><span class="flaticon-bathtub"></span>{{bathrooms}}</li>
+        					<li><span class="flaticon-floor-plan"></span>{{squareMeters}}</li>
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
-						<span class="location">Oakland</span>
+						<span class="location">{{location}}</span>
 						<button class="d-flex align-items-center justify-content-center btn-custom-edit">
         					<span class="icon-trash"></span>
 						</a>
@@ -83,7 +84,8 @@
         					<span class="icon-edit"></span>
         				</button>
         			</div>
-        		</div>
+				</div>
+				{{/myFavourites}}
         	</div>
         	<div class="col-md-4">
         		<div class="property-wrap ftco-animate">
