--- a/daw.webapp12/src/main/resources/templates/properties-single.html
+++ b/daw.webapp12/src/main/resources/templates/properties-single.html
@@ -37,12 +37,12 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a href="/MainPage" class="nav-link">Home</a></li>
-				<li class="nav-item"><a href="/property-upload" class="nav-link">Poner anuncio</a></li>
-				<li class="nav-item"><a href="/properties" class="nav-link">Mis favoritos</a></li>
-				<li class="nav-item"><a href="/properties-modificar" class="nav-link">Mis anuncios</a></li>
-				<li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
-				<li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="property-upload.html" class="nav-link">Poner anuncio</a></li>
+            <li class="nav-item"><a href="properties.html" class="nav-link">Mis favoritos</a></li>
+            <li class="nav-item"><a href="properties-modificar.html" class="nav-link">Mis anuncios</a></li>
+            <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -87,7 +87,7 @@
 									<a class="nav-link active" id="pills-description-tab" data-toggle="pill" href="#pills-description" role="tab" aria-controls="pills-description" aria-expanded="true">Características</a>
 								  </li>  
 							    <li class="nav-item">
-							      <a class="nav-link" id="pills-manufacturer-tab" data-toggle="pill" href="#pills-manufacturer" role="tab" aria-controls="pills-manufacturer" aria-expanded="true">Descripción</a>
+							      <a class="nav-link" id="pills-manufacturer-tab" data-toggle="pill" href="#pills-manufacturer" role="tab" aria-controls="pills-manufacturer" aria-expanded="true">Descripción y localización</a>
 							    </li>
 							    <li class="nav-item">
 							      <a class="nav-link" id="pills-review-tab" data-toggle="pill" href="#pills-review" role="tab" aria-controls="pills-review" aria-expanded="true">Opiniones</a>
@@ -132,6 +132,10 @@
 						      <p> Una casa acogedora en las afueras de madrid, situada cerca de la sierra con un amplio jardin y habitaciones espaciosas. También tiene una piscina climatizada y un garage. Tendrás una amplia zona de ocio para realizar todo tipo de eventos, ¿vas a desaprovechar esta oportunidad? 
 								  La casa tiene 1200 metros cuadrados, 6 habitaciones, 2 baños amplios, 1 jacuzzi, 1 piscina climatizadad y 1 garaje.</p>
 								<p>La casa tiene 1200 metros cuadrados, 6 habitaciones, 2 baños amplios, 1 jacuzzi, 1 piscina climatizadad y 1 garaje.</p>
+								
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12119.954069497404!2d-4.141016163730674!3d40.58600886953104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd410a40328b75a1%3A0x9bc1505ee52a51fd!2s28280%20El%20Escorial%2C%20Madrid!5e0!3m2!1ses!2ses!4v1581961235846!5m2!1ses!2ses"
+ 								width="800" height="650" frameborder="5" style="border:0;" allowfullscreen=""></iframe>
+
 							</div>
 							<div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
 								<p> Si quiere leer las opiniones o poner una reseña tiene que registrarse. </p>
@@ -143,22 +147,17 @@
 		      </div>
 				</div>
       </div>
-    </section>
-
-    <footer class="ftco-footer ftco-section">
-      <div class="container">
-          <div class="col-md-12 text-center">
+	</section>
 	
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-          </div>
-      </div>
-    </footer>
+
+	
+			  
+	
+            
     
   
 
-  <!-- loader -->
+  
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
