Added functionality to bring a User`s favourite advertisements

--- a/daw.webapp12/src/main/resources/templates/properties-modificar.html
+++ b/daw.webapp12/src/main/resources/templates/properties-modificar.html
@@ -64,7 +64,7 @@
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row">
-				{{#myFavourites}}
+				{{#Favourites}}
 				<div class="col-md-4">
 					<div class="property-wrap ftco-animate">
 						<a href="properties-single.html" class="img" style="background-image: url(images/work-1.jpg);"></a>
@@ -85,7 +85,7 @@
 							</button>
 						</div>
 					</div>
-				{{/myFavourites}}
+				{{/Favourites}}
 			</div>
 		</div>
 	</section>
