--- a/daw.webapp12/src/main/resources/templates/properties.html
+++ b/daw.webapp12/src/main/resources/templates/properties.html
@@ -37,9 +37,9 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="/MainPage" class="nav-link">Home</a></li>
+	          <li class="nav-item"><a href="/MainPage" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/property-upload" class="nav-link">Poner anuncio</a></li>
-            <li class="nav-item"><a href="/properties" class="nav-link">Mis favoritos</a></li>
+            <li class="nav-item active"><a href="/properties" class="nav-link">Mis favoritos</a></li>
             <li class="nav-item"><a href="/properties-modificar" class="nav-link">Mis anuncios</a></li>
             <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
@@ -64,7 +64,7 @@
 		<section class="ftco-section">
     	<div class="container">
         <div class="row">
-          {{#advertisements}}
+          {{#Favourites}}
         	<div class="col-md-4">
         		<div class="property-wrap ftco-animate">
         			<a href="properties-single.html" class="img" style="background-image: url(images/work-1.jpg);"></a>
@@ -83,7 +83,7 @@
         			</div>
         		</div>
 			</div>
-			{{/advertisements}}
+			{{/Favourites}}
     	</div>
     </section>
 
