--- a/daw.webapp12/src/main/resources/templates/property-upload.html
+++ b/daw.webapp12/src/main/resources/templates/property-upload.html
@@ -163,7 +163,7 @@
                   <input type="submit" value="Subir imagenes" class="btn btn-primary py-3 px-5">
                   <input type="submit" value="Publicar anuncio" class="btn btn-primary py-3 px-5">
                 </div>
-                <a href="http://127.0.0.1:5500/uptown/properties-modificar.html"><input type="button" value="Volver a Mis anuncios"></a>
+                <a href="/properties-modificar"><input type="button" value="Volver a Mis anuncios"></a>
                 
               </form>     
             </div>
