--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -24,6 +24,7 @@
     
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -115,7 +116,6 @@
           <div class="col-md-12 heading-section text-center ftco-animate mb-5">
           	<span class="subheading">Recomendaciones</span>
             <h2 class="mb-2">Viviendas seleccionadas para ti</h2>
-              {{#hola}} <p> {{hola}}</p>{{/hola}}
           </div>
         </div>
         <div class="row">
@@ -175,94 +175,6 @@
         	</div>
         </div>
     	</div>
-    </section>
-
-
-    <section class="ftco-section testimony-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-          	<span class="subheading">Ofertas</span>
-            <h2 class="mb-3">Últimas ofertas</h2>
-          </div>
-        </div>
-        <div class="row ftco-animate">
-          <div class="col-md-12">
-            <div class="carousel-testimony owl-carousel ftco-owl">
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/piso1.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name">Piso La Latina</p>
-		                    <span class="position">1350€</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/piso2.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name">Piso Gran Vía</p>
-		                    <span class="position">1500€</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/piso3.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name">Piso Fuenlabrada Central</p>
-		                    <span class="position">750€</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/piso1.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name">Piso Moralzarzal</p>
-		                    <span class="position">750€</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap py-4">
-                  <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/piso2.jpg)"></div>
-                    	<div class="pl-3">
-		                    <p class="name">Piso Mostoles Universidad</p>
-		                    <span class="position">700€</span>
-		                  </div>
-	                  </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>	 
 
     <div class="container">
@@ -271,7 +183,12 @@
       <div id="chartContainer" style="height: 370px; width: 100%;"></div>
     </div>
     
-    
+    <div id="invisible1">
+      {{#graphValues}}
+      <p >{{key}}</p>
+      <p>{{value}}</p>
+      {{/graphValues}}
+    </div>
     <footer class="ftco-footer ftco-section">
       <div class="container">
           <div class="col-md-12 text-center">
