--- a/daw.webapp12/src/main/resources/templates/property-upload.html
+++ b/daw.webapp12/src/main/resources/templates/property-upload.html
@@ -17,7 +17,7 @@
       <div class="myContainer">
               
             <div class="col-md-8 mb-md-5 d-flex align-middle justify-content-center" id="content">
-                <h2 class="text-center witt">PUBLICAR ANUNCIO <br></h2>
+                <h2 class="text-center witt" id="submitAdvertisementButton">PUBLICAR ANUNCIO <br></h2>
                 <br>
                 <form action="/action_page.php">
                 <h3 class="botonDesp1">Tipo de anuncio:</h3>
