--- a/daw.webapp12/src/main/resources/static/css/style.css
+++ b/daw.webapp12/src/main/resources/static/css/style.css
@@ -484,7 +484,10 @@ pre {
   padding-left: 10px;
   color:black !important;
 }
-
+.bigInput{
+  width: max-content;
+  height: max-content;
+}
 
 .no-gutters {
   margin-right: 0;
