--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -59,47 +59,47 @@
           	<div class="text text-center content-center" id = "containerPresentation">
 	            <h1 class="mb-4">Encuentra ya <br>tu próxima propiedad</h1>
 	            <p style="font-size: 18px;">Introduce la zona deseada y disfruta de nuestro catálogo de viviendas</p>
-	            <form action="#" class="search-location mt-md-5">
+	            <form method="GET" action="search" class="search-location mt-md-5">
 		        		<div class="row justify-content-center search-form">
 		        			<div class="col-lg-12 align-items-end">
 		        				<div class="form-group">
 		          				<div class="form-field">
 		          				<div class="row">
-                        <a class="filter">Busqueda de:</a>
-                        <select class="selectInput"> 
+                      <a class="filter">Busqueda de:</a>
+                        <select name= "searchType" class="selectInput"> 
                           <option value="renting">Alquiler</option>
                           <option value="buy">Compra</option>
                         </select>
                         <a class="filter">Tipo de propiedad:</a>
-                        <select class="selectInput"> 
+                        <select name= "propertyType" class="selectInput"> 
                           <option value="house">Casa</option>
                           <option value="apartment">Apartamento</option>
                           <option value="local">Local</option>
                         </select>
                         <label class="filter">Metros Cuadrados:</label>
-                        <input class="numberInput" type="number" min="10" max="250">
+                        <input name= "squareMeters" value="25" class="numberInput" type="number" min="10" max="250">
                       </div>
                         <div class="row">
                         <a class="filter"> Número de habitaciones:</a>
-                        <select class="selectInput" > 
-                          <option value="1+">1 o más</option>
-                          <option value="2+">2 o más</option>
-                          <option value="3+">3 o más</option>
+                        <select name = "rooms" class="selectInput" > 
+                          <option value="1">1 o más</option>
+                          <option value="2">2 o más</option>
+                          <option value="3">3 o más</option>
                         </select>
                         <a class="filter"> Número de baños:</a>
 
-                        <select class="selectInput"> 
-                          <option value="1+">1 o más</option>
-                          <option value="2+">2 o más</option>
-                          <option value="3+">3 o más</option>
+                        <select name="bathrooms" class="selectInput"> 
+                          <option value="1">1 o más</option>
+                          <option value="2">2 o más</option>
+                          <option value="3">3 o más</option>
                         </select>
-                        
+                      
                         <label class="filter" >Precio:</label>
-                        <input class="numberInput" type="number" min="10000" max="5000000">
+                        <input class="numberInput" value="1000"  name= "price" type="number" min="10000" max="5000000">
                         
                       </div>
-				                <input type="text" class="form-control search" placeholder="Introduce una zona">
-				                <button><span class="ion-ios-search"></span></button>
+				                <input type="text" name = "location" class="form-control search" placeholder="Introduce una zona">
+				                <button type="submit"><span class="ion-ios-search"></span></button>
 				              </div>
 			              </div>
 		        			</div>
