--- a/daw.webapp12/src/main/resources/templates/properties-search.html
+++ b/daw.webapp12/src/main/resources/templates/properties-search.html
@@ -54,8 +54,8 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="/MainPage">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Favoritos <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">Tus <br>anuncios favoritos</h1>
+          	<p class="breadcrumbs"><span class="mr-2"><a href="/MainPage">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Búsqueda <i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Resultado de <br>tu búsqueda</h1>
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@
 		<section class="ftco-section">
     	<div class="container">
         <div class="row">
-          {{#Favourites}}
+          {{#Property}}
         	<div class="col-md-4">
         		<div class="property-wrap ftco-animate">
         			<a href="properties/{{id}}" class="img" style="background-image: url(images/work-1.jpg);"></a>
@@ -75,7 +75,7 @@
         					<li><span class="flaticon-bathtub"></span>{{bathrooms}}</li>
         					<li><span class="flaticon-floor-plan"></span>{{squareMeters}}</li>
         				</ul>
-        				<h3><a href="properties-single.html">{{property}} en {{location}}</a></h3>
+        				<h3><a href="properties/{{id}}">{{property}} en {{location}}</a></h3>
         				<span class="location">{{location}}</span>
         				<a class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
@@ -83,7 +83,7 @@
         			</div>
         		</div>
 			</div>
-			{{/Favourites}}
+			{{/Property}}
     	</div>
     </section>
 
