--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -67,14 +67,14 @@
 		          				<div class="row">
                       <a class="filter">Busqueda de:</a>
                         <select name= "searchType" class="selectInput"> 
-                          <option value="renting">Alquiler</option>
-                          <option value="buy">Compra</option>
+                          <option value="Alquiler">Alquiler</option>
+                          <option value="Compra">Compra</option>
                         </select>
                         <a class="filter">Tipo de propiedad:</a>
                         <select name= "propertyType" class="selectInput"> 
-                          <option value="house">Casa</option>
-                          <option value="apartment">Apartamento</option>
-                          <option value="local">Local</option>
+                          <option value="Casa">Casa</option>
+                          <option value="Apartamento">Apartamento</option>
+                          <option value="Local">Local</option>
                         </select>
                         <label class="filter">Metros Cuadrados:</label>
                         <input name= "squareMeters" value="25" class="numberInput" type="number" min="10" max="250">
