--- a/daw.webapp12/src/main/resources/templates/properties-search.html
+++ b/daw.webapp12/src/main/resources/templates/properties-search.html
@@ -83,7 +83,10 @@
         			</div>
         		</div>
 			</div>
-			{{/Property}}
+      {{/Property}}
+      {{#Error}}
+      <h2>{{.}}</h2>
+      {{/Error}}
     	</div>
     </section>
 
