--- a/daw.webapp12/src/main/resources/templates/properties-single-user.html
+++ b/daw.webapp12/src/main/resources/templates/properties-single-user.html
@@ -142,7 +142,7 @@
 							   		<div class="col-md-7">
 							   			<h3 class="head">23 Reviews</h3>
 							   			<div class="review d-flex">
-									   		<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
+									   		<div class="users-img" style="background-image: url(images/person_1.jpg)"></div>
 									   		<div class="desc">
 									   			<h4>
 									   				<span class="text-left">Jacob Webb</span>
@@ -162,7 +162,7 @@
 									   		</div>
 									   	</div>
 									   	<div class="review d-flex">
-									   		<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
+									   		<div class="users-img" style="background-image: url(images/person_2.jpg)"></div>
 									   		<div class="desc">
 									   			<h4>
 									   				<span class="text-left">Jacob Webb</span>
@@ -182,7 +182,7 @@
 									   		</div>
 									   	</div>
 									   	<div class="review d-flex">
-									   		<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
+									   		<div class="users-img" style="background-image: url(images/person_3.jpg)"></div>
 									   		<div class="desc">
 									   			<h4>
 									   				<span class="text-left">Jacob Webb</span>
